--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -237,11 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "email =\"Xavier\""
+    "email =\"Xavier'\""
    ]
   },
   {
