--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,7 @@
    },
    "outputs": [],
    "source": [
-    "name # 'Liz Kaplan'"
+    "name = \"Liz Kaplan\" # 'Liz Kaplan'"
    ]
   },
   {
