--- a/index.ipynb
+++ b/index.ipynb
@@ -448,10 +448,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "name = \"Liz Kaplan\" # 'Liz Kaplan'"
@@ -465,7 +463,7 @@
    },
    "outputs": [],
    "source": [
-    "email # 'liz@ka-plan.com'"
+    "email= \"\" # 'liz@ka-plan.com'"
    ]
   },
   {
