Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,13 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "email= \"\" # 'liz@ka-plan.com'"
+    "email= \"liz@ka-plan.com\" # 'liz@ka-plan.com'"
    ]
   },
   {
