Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,22 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art Vandelay'"
+       "'Xavier'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = 'Art Vandelay'\n",
+    "name = 'Xavier'\n",
     "name"
    ]
   },
