--- a/index.ipynb
+++ b/index.ipynb
@@ -656,22 +656,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Liz Kaplan'"
+       "'xavier'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "name = 'Liz Kaplan'\n",
+    "name = 'xavier'\n",
     "name"
    ]
   },
